RESOLVED FIXED154395
Fix pessimizing-move warnings
https://bugs.webkit.org/show_bug.cgi?id=154395
Summary Fix pessimizing-move warnings
Csaba Osztrogonác
Reported 2016-02-18 06:07:40 PST
../../Source/WebCore/platform/graphics/efl/CairoUtilitiesEfl.cpp:85:12: warning: moving a local object in a return statement prevents copy elision [-Wpessimizing-move] return std::move<WTF::CheckMoveParameter>(image); ^ ../../Source/WebCore/platform/graphics/efl/CairoUtilitiesEfl.cpp:85:12: note: remove std::move call here return std::move<WTF::CheckMoveParameter>(image); ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ~ ../../Source/WebCore/platform/graphics/surfaces/GLTransportSurface.cpp:56:16: warning: moving a local object in a return statement prevents copy elision [-Wpessimizing-move] return std::move<WTF::CheckMoveParameter>(surface); ^ ../../Source/WebCore/platform/graphics/surfaces/GLTransportSurface.cpp:56:16: note: remove std::move call here return std::move<WTF::CheckMoveParameter>(surface); ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ~ ../../Source/WebCore/platform/graphics/surfaces/GLTransportSurface.cpp:223:12: warning: moving a local object in a return statement prevents copy elision [-Wpessimizing-move] return std::move<WTF::CheckMoveParameter>(client); ^ ../../Source/WebCore/platform/graphics/surfaces/GLTransportSurface.cpp:223:12: note: remove std::move call here return std::move<WTF::CheckMoveParameter>(client); ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ~
Attachments
Patch (2.31 KB, patch)
2016-02-18 06:08 PST, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2016-02-18 06:08:36 PST
WebKit Commit Bot
Comment 2 2016-02-19 02:48:58 PST
Comment on attachment 271657 [details] Patch Clearing flags on attachment: 271657 Committed r196811: <http://trac.webkit.org/changeset/196811>
WebKit Commit Bot
Comment 3 2016-02-19 02:49:02 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.