Fix pessimizing-move warnings https://bugs.webkit.org/show_bug.cgi?id=154395

Reviewed by Michael Catanzaro.

* platform/graphics/efl/CairoUtilitiesEfl.cpp:
(WebCore::evasObjectFromCairoImageSurface):
* platform/graphics/surfaces/GLTransportSurface.cpp:
(WebCore::GLTransportSurface::createTransportSurface):
(WebCore::GLTransportSurfaceClient::createTransportSurfaceClient):


Canonical link: https://commits.webkit.org/172564@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196811 268f45cc-cd09-0410-ab3c-d52691b4dbfc