Source/WebCore/platform/graphics/efl/CairoUtilitiesEfl.cpp
@@ -82,7 +82,7 @@ EflUniquePtr<Evas_Object> evasObjectFromCairoImageSurface(Evas* canvas, cairo_su
 
     evas_object_image_data_copy_set(image.get(), data);
 
-    return WTFMove(image);
+    return image;
 }
 
 PassRefPtr<cairo_surface_t> createSurfaceForBackingStore(Ecore_Evas* ee)
